--- a/index.html
+++ b/index.html
@@ -72,55 +72,55 @@
 
         <div class="box">
             <div class="image">
-                <img src="../img/momen-1.jpg" alt="">
+                <img src="./img/momen-1.jpg" alt="">
             </div>
         </div>
 
         <div class="box">
             <div class="image">
-                <img src="../img/moment-2.jpg" alt="">
+                <img src="./img/moment-2.jpg" alt="">
             </div>
         </div>
 
         <div class="box">
             <div class="image">
-                <img src="../img/momen-3.jpg" alt="">
+                <img src="./img/momen-3.jpg" alt="">
             </div>
         </div>
 
         <div class="box">
             <div class="image">
-                <img src="../img/momen-4.jpg" alt="">
+                <img src="./img/momen-4.jpg" alt="">
             </div>
         </div>
 
         <div class="box">
             <div class="image">
-                <img src="../img/momen-5.jpg" alt="">
+                <img src="./img/momen-5.jpg" alt="">
             </div>
         </div>
 
         <div class="box">
             <div class="image">
-                <img src="../img/momen-6.jpg" alt="">
+                <img src="./img/momen-6.jpg" alt="">
             </div>
         </div>
 
         <div class="box">
             <div class="image">
-                <img src="../img/momen-7.jpg" alt="">
+                <img src="./img/momen-7.jpg" alt="">
             </div>
         </div>
 
         <div class="box">
             <div class="image">
-                <img src="../img/momen-8.jpg" alt="">
+                <img src="./img/momen-8.jpg" alt="">
             </div>
         </div>
 
         <div class="box">
             <div class="image">
-                <img src="../img/momen-9.jpg" alt="">
+                <img src="./img/momen-9.jpg" alt="">
             </div>
         </div>
 
